[package]
name = "yaya"
version = "0.1.0"
authors = ["yanfeng.li <yanfeng.li@yunqueyi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
bytes = "0.5"
futures = "0.3.0"
hyper = "0.13"

[dependencies.clap]
version = "2.33.0"
default-features = false